{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 23,
  "lineage": "cd530a87-2fc1-30c5-0eda-a79e46602a50",
  "resources": [
    {
      "module": "module.security_group_eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:869366174385:security-group/sg-01d39198301899fff",
            "description": "Permite a conexao publica com eks ",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01d39198301899fff",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TCP eks Allowed",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "challenge-fiap-eks",
            "name_prefix": "",
            "owner_id": "869366174385",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "challenge-fiap-eks"
            },
            "tags_all": {
              "Name": "challenge-fiap-eks",
              "Terraform": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-085a93071a5b140b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.poc-infra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d8836a60310411a1",
            "association_id": "eipassoc-0d6d31e85a0aaa857",
            "domain": "vpc",
            "id": "eipalloc-0d8836a60310411a1",
            "network_border_group": "us-east-1",
            "network_interface": "eni-057fe28d61ea82d27",
            "private_dns": "ip-10-0-0-190.ec2.internal",
            "private_ip": "10.0.0.190",
            "public_dns": "ec2-44-217-208-235.compute-1.amazonaws.com",
            "public_ip": "44.217.208.235",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "Terraform": "True"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "poc-infra-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:869366174385:internet-gateway/igw-0bf95fa4897eed980",
            "id": "igw-0bf95fa4897eed980",
            "owner_id": "869366174385",
            "tags": {
              "Name": "challenge-fiap-main"
            },
            "tags_all": {
              "Name": "challenge-fiap-main",
              "Terraform": "True"
            },
            "vpc_id": "vpc-085a93071a5b140b0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.poc-infra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "poc-infra-nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d8836a60310411a1",
            "association_id": "eipassoc-0d6d31e85a0aaa857",
            "connectivity_type": "public",
            "id": "nat-03d01e1b7548e0dfa",
            "network_interface_id": "eni-057fe28d61ea82d27",
            "private_ip": "10.0.0.190",
            "public_ip": "44.217.208.235",
            "subnet_id": "subnet-02f00eb9f86df0c73",
            "tags": {
              "Name": "challenge-fiap-nat-gateway"
            },
            "tags_all": {
              "Name": "challenge-fiap-nat-gateway",
              "Terraform": "True"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.eip-ngw",
            "module.vpc.aws_internet_gateway.poc-infra-igw",
            "module.vpc.aws_subnet.poc-infra-subnet-publica-a",
            "module.vpc.aws_vpc.poc-infra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privada-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:869366174385:route-table/rtb-0f963d3fc9e6c7fc5",
            "id": "rtb-0f963d3fc9e6c7fc5",
            "owner_id": "869366174385",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-03d01e1b7548e0dfa",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "challenge-fiap-privada-rt"
            },
            "tags_all": {
              "Name": "challenge-fiap-privada-rt",
              "Terraform": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-085a93071a5b140b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.eip-ngw",
            "module.vpc.aws_internet_gateway.poc-infra-igw",
            "module.vpc.aws_nat_gateway.poc-infra-nat-gw",
            "module.vpc.aws_subnet.poc-infra-subnet-publica-a",
            "module.vpc.aws_vpc.poc-infra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publica-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:869366174385:route-table/rtb-0d053fcee289f7ad3",
            "id": "rtb-0d053fcee289f7ad3",
            "owner_id": "869366174385",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bf95fa4897eed980",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "challenge-fiap-publica-rt"
            },
            "tags_all": {
              "Name": "challenge-fiap-publica-rt",
              "Terraform": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-085a93071a5b140b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.poc-infra-igw",
            "module.vpc.aws_vpc.poc-infra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privada-rt-association-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-016baafada94e06b4",
            "route_table_id": "rtb-0f963d3fc9e6c7fc5",
            "subnet_id": "subnet-0a56e8e192e3be712"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip-ngw",
            "module.vpc.aws_internet_gateway.poc-infra-igw",
            "module.vpc.aws_nat_gateway.poc-infra-nat-gw",
            "module.vpc.aws_route_table.privada-rt",
            "module.vpc.aws_subnet.poc-infra-subnet-privada-a",
            "module.vpc.aws_subnet.poc-infra-subnet-publica-a",
            "module.vpc.aws_vpc.poc-infra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privada-rt-association-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da5352a93fc1bcd8",
            "route_table_id": "rtb-0f963d3fc9e6c7fc5",
            "subnet_id": "subnet-0121fb28d2fc7eda4"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip-ngw",
            "module.vpc.aws_internet_gateway.poc-infra-igw",
            "module.vpc.aws_nat_gateway.poc-infra-nat-gw",
            "module.vpc.aws_route_table.privada-rt",
            "module.vpc.aws_subnet.poc-infra-subnet-privada-b",
            "module.vpc.aws_subnet.poc-infra-subnet-publica-a",
            "module.vpc.aws_vpc.poc-infra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publica-rt-association-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-044cef889ebb3168e",
            "route_table_id": "rtb-0d053fcee289f7ad3",
            "subnet_id": "subnet-02f00eb9f86df0c73"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.poc-infra-igw",
            "module.vpc.aws_route_table.publica-rt",
            "module.vpc.aws_subnet.poc-infra-subnet-publica-a",
            "module.vpc.aws_vpc.poc-infra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publica-rt-association-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b94e5d9db59d3c6a",
            "route_table_id": "rtb-0d053fcee289f7ad3",
            "subnet_id": "subnet-0ef7a8c124eec226a"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.poc-infra-igw",
            "module.vpc.aws_route_table.publica-rt",
            "module.vpc.aws_subnet.poc-infra-subnet-publica-b",
            "module.vpc.aws_vpc.poc-infra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "poc-infra-subnet-privada-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:869366174385:subnet/subnet-0a56e8e192e3be712",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a56e8e192e3be712",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "869366174385",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "challenge-fiap-subnet-privada-a"
            },
            "tags_all": {
              "Name": "challenge-fiap-subnet-privada-a",
              "Terraform": "True"
            },
            "vpc_id": "vpc-085a93071a5b140b0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.poc-infra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "poc-infra-subnet-privada-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:869366174385:subnet/subnet-0121fb28d2fc7eda4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0121fb28d2fc7eda4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "869366174385",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "challenge-fiap-subnet-privada-b"
            },
            "tags_all": {
              "Name": "challenge-fiap-subnet-privada-b",
              "Terraform": "True"
            },
            "vpc_id": "vpc-085a93071a5b140b0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.poc-infra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "poc-infra-subnet-publica-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:869366174385:subnet/subnet-02f00eb9f86df0c73",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.128/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02f00eb9f86df0c73",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "869366174385",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "challenge-fiap-subnet-publica-a"
            },
            "tags_all": {
              "Name": "challenge-fiap-subnet-publica-a",
              "Terraform": "True"
            },
            "vpc_id": "vpc-085a93071a5b140b0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.poc-infra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "poc-infra-subnet-publica-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:869366174385:subnet/subnet-0ef7a8c124eec226a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.192/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef7a8c124eec226a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "869366174385",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "challenge-fiap-subnet-publica-b"
            },
            "tags_all": {
              "Name": "challenge-fiap-subnet-publica-b",
              "Terraform": "True"
            },
            "vpc_id": "vpc-085a93071a5b140b0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.poc-infra-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "poc-infra-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:869366174385:vpc/vpc-085a93071a5b140b0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-068a968f651e90a3d",
            "default_route_table_id": "rtb-069e5b89c800518eb",
            "default_security_group_id": "sg-0e19b36605bb64e14",
            "dhcp_options_id": "dopt-09149382344fadacf",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-085a93071a5b140b0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-069e5b89c800518eb",
            "owner_id": "869366174385",
            "tags": {
              "Name": "challenge-fiap-vpc"
            },
            "tags_all": {
              "Name": "challenge-fiap-vpc",
              "Terraform": "True"
            }
          }
        }
      ]
    }
  ]
}